--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "license": "MIT",
   "author": "Dylan Emerson",
-  "type": "commonjs",
+  "type": "module",
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "ws": "^8.18.3"
+    "dotenv": "^17.2.3",
+    "ws": "^8.19.0"
   }
 }
