--- a/emico-bot.service
+++ b/emico-bot.service
@@ -6,14 +6,14 @@
 Description=Chat bot for Emico Mirari's Twitch channel
 
 [Service]
-ExecStart=/emicobot/emico-bot-twitch/bot.js
 Restart=always
-User=nobody
+User=root
 # Note Debian/Ubuntu uses 'nogroup', RHEL/Fedora uses 'nobody'
 Group=nogroup
 Environment=PATH=/usr/bin:/usr/local/bin
 Environment=NODE_ENV=production
 WorkingDirectory=/emicobot/emico-bot-twitch/
+ExecStart="/emicobot/emico-bot-twitch/bot.js"
 
 [Install]
 WantedBy=multi-user.target
